--- a/ORUMCCaveQuestVBSEmailService/Web.config
+++ b/ORUMCCaveQuestVBSEmailService/Web.config
@@ -4,7 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="DirectorEmailAddress" value="dana.hanlon@oakridgeumc.org"/>
+    <add key="BackupEmailAddress" value="oakridgevbs@yahoo.com"/>
+    <add key="BccEmailAddress" value="briandavis1977@gmail.com"/>
+    <add key="FromEmailAddress" value="donotreply@oakridgeumc.org"/>
+    <add key="EmailSubject" value="CaveQuest VBS Registration for "/>
+    <add key="PersistentStorageURL" value="https://popping-torch-8932.firebaseio.com/items/"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
