--- a/ORUMCCaveQuestVBSEmailService/Web.Debug.config
+++ b/ORUMCCaveQuestVBSEmailService/Web.Debug.config
@@ -4,8 +4,10 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="DirectorEmailAddress" value="briandavis1977@gmail.com"/>
-    <add key="BackupEmailAddress" value="briandavis1977@gmail.com"/>
+    <add key="DirectorEmailAddress" value="briandavis1977@gmail.com"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="BackupEmailAddress" value="briandavis1977@gmail.com"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
